Fix status overflow

--- a/static/style.css
+++ b/static/style.css
@@ -53,6 +53,7 @@
 
 .status {
 	flex: 1;
+	overflow-x: auto;
 }
 
 .status-dname {
